add analyze connection
